webium: prevent overflow in tab strip and bookmark bar
Add overflow: hidden to the tabstrip and top container, prevent caption
buttons from wrapping, and allow tab titles to shrink to a minimum width
of 0px.

Bug: 393144165
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6902613
Auto-Submit: Keren Zhu <kerenzhu@chromium.org>
Commit-Queue: Paul Jensen <pauljensen@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1509540}

--- a/chrome/browser/resources/webui_browser/app.css
+++ b/chrome/browser/resources/webui_browser/app.css
@@ -85,14 +85,16 @@ cr-searchbox[dropdown-is-visible] {
 
 .tabstripDiv {
   float: left;
+  overflow: hidden;
   text-align: left;
 }
 
 .captionButtonsDiv {
+  app-region: drag;
   float: right;
   flex: 1;
   text-align: right;
-  app-region: drag;
+  white-space: nowrap;
 }
 
 .captionButtonsDiv cr-button {
@@ -121,6 +123,7 @@ cr-searchbox[dropdown-is-visible] {
 
 #topContainer {
   grid-row: 1;
+  overflow: hidden;
 }
 
 #main {
