--- a/chrome/browser/resources/webui_browser/tab_element.css
+++ b/chrome/browser/resources/webui_browser/tab_element.css
@@ -13,6 +13,7 @@
     flex-grow: 1;
     flex-basis: 0;
     max-width: 233px;
+    min-width: 0px;
 }
 
 .tab {
